# resolution_robust_3d_mri

./: .gitignore  aggregate_diffusion_metrics.py  precompute_skmtea_kspace_norms.py  probe_brats_norm.py  probe_kno_lmdb.py  probe_skmtea_norm.py  probe_volumes.py  pyproject.toml  reconstruct_csgm_kno.py  reconstruct_csgm_val.py  reconstruct_modified.py  reconstruct_skmtea.py  smoke_brats.py  train_diff_models.py
hydra/dataset/: brats.yaml  skmtea.yaml
hydra/diffmodels/: base.yaml  default_dense_cached.yaml
hydra/exps/brats/: base_training.yaml  train_dense.yaml
hydra/exps/skmtea/: base_recon.yaml  base_training.yaml  train_dense.yaml  varrecon_diffprior_4x.yaml  varrecon_voxelrep_diffprior_4x.yaml
hydra/problem_trafos/dataset_trafo/: skmtea_recon_calc_mvue.yaml
logs/: skmtea_dense.657745.out
presentation_prep/: make_figures.py
src/datasets/: brats_slice_dataset.py  dataset_resolver.py  skmtea_slice_dataset.py  skmtea_volume_dataset.py
src/diffmodels/: inline_generation.py  utils_save.py
src/diffmodels/trainer/: trainer.py
src/problem_trafos/dataset_trafo/: fastmri_2d_trafo.py
src/representations/: representation_resolver.py
src/utils/: wandb_utils.py
uncon_gen/: generate_unconditional.py
